<resources>
    <string name="app_name">MVVM</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="beranda">Beranda</string>
    <string name="pesanan">Pesanan</string>
    <string name="notifikasi">Notifikasi</string>
    <string name="akun">Akun</string>
    <string name="skip">Skip</string>

    <string name="title_1">Tentukan Lokasi Staycationmu pilihanmu dengan piknik.id</string>
    <string name="subtitle_1">Sekarang kamu dapat memilih tempat berlibur bersama teman atau keluarga tanpa perlu takut salah lokasi.</string>

    <string name="title_2">Menginap di ruang outdoor tanpa perlu repot membawa banyak perlengkapan</string>
    <string name="subtitle_2">Menjauh sejenak dari hiruk pikuk keramaian kota sambil menikmati gemercik sungai jernih yang mengalir , Sambil menghirup hembusan udara murni yang sejuk.</string>

    <string name="title_3">Staycation tanpa perlu khawatir tertular virus dan penyakit</string>
    <string name="subtitle_3">Nikmati liburanmu dengan tetap menjaga protokol kesehatan yang diterapkan oleh pemerintah</string>
    <string name="persiapan_liburanmu">Persiapan liburanmu</string>
    <string name="chat">Chat</string>

    <string name="email">Email</string>
    <string name="nama_lengkap">Nama Lengkap</string>
    <string name="password">Password</string>
    <string name="password_confirmation">Konfirmasi Password</string>

    <string name="registrasi_akun">Registrasi Akun</string>
    <string name="buat_akun">Buat Akun</string>
    <string name="udah_punya_akun">Udah punya akun ?</string>
    <string name="masuk_aja">Masuk aja</string>
    <string name="masuk_akun">Masuk Akun</string>
    <string name="masuk">Masuk</string>
    <string name="belum_punya_akun">Belum punya akun?</string>
    <string name="buat_dulu">Buat dulu</string>

    <string name="lokasi_dummy">Bandung</string>
    <string name="lihat_semua">Lihat Semua</string>
    <string name="nama_dummy">Hi, Satrio</string>
    <string name="bumper">BumPer</string>
    <string name="open_trip">Open Trip</string>
    <string name="nimbrung">Nimbrung</string>
    <string name="promo">Promo</string>
    <string name="populer_di">Populer di</string>
    <string name="artikel_buat_kamu">Artikel Buat Kamu</string>

    <string name="toolbar_dummy">toolbar</string>
    <string name="pilihan_populer">Pilihan populer dengan standar protokol kesehatan</string>
    <string name="belum_ada_notifikasi">Belum Ada notifikasi</string>
    <string name="belum_ada_notifikasi_caption">Semua notifikasi yang kami kirimkan akan muncul di sini supaya anda bisa mengeceknya dengan mudah kapan pun</string>
    <string name="chse">CHSE Certified</string>
    <string name="chme_caption">Sertifikasi CHSE dari Kemenparekraf karena telah memberikan jaminan terhadap protokol kebersihan</string>
    <string name="review_dummy">“Tempatnya sejuk, tenda bersih dan nyaman, makanan yang ..."</string>

    <string name="dummy_dekripsi">Wisata Batu Kuda berlokasi di lereng Gunung Manglayang, tepatnya di Kampung Cikoneng, Desa Cibiru Wetan, Kecamatan Cileunyi, Kabupaten Bandung. Tempat wisata batu kuda manglayang saat ini merupakan destinasi favorit wisata para pecinta alam yang ingin menikmati keasrian alam bandung.</string>
    <string name="tittle_pemesanan">Batu Kuda Manglayang</string>
    <string name="check_in_pemesanan">Check-in</string>
    <string name="check_out_pemesanan">check-out</string>
    <string name="tanggal_checkin_pemesanan">Minggu,  4 Juli 2021</string>
    <string name="tanggal_checkou_pemesanan">Senin, 5 Juli 2021</string>
    <string name="paket_pemesanan">Camping Dome Twin</string>
    <string name="Tenda_pemesanan">1 Tenda Camping Dome</string>
    <string name="jumlah_orang_pemesanan">2 Dewasa</string>
    <string name="makan_pemesanan">Termasuk makan 3 kali</string>
    <string name="caution_pemesanan">Sehubungan dengan situasi COVID-19, kami mewajibkan untuk melampirkan keterangan negative COVID-19 atau Rapid Antigen dengan mitra kami.</string>
    <string name="banner">Data Pemesan</string>
    <string name="nama_data_pemesan">Satrio Rahman Wicaksono</string>
    <string name="email_data_pemesan">iam.satriorahman28@gmail.com</string>
    <string name="banner_detailkesehatan">Detail Kesehatan</string>
    <string name="banner_suratkesehatan">Surat keterangan Rapid Antigen / PCR Swab Test (Negative) dalam kurun waktu maksimal 48 jam</string>
    <string name="checkbox_surat_kesehatan">Saya belum punya surat keterangan</string>
    <string name="hargakesehatan_pemesanan">Rp 300.000</string>
    <string name="total_banner">Total</string>
    <string name="point_pemesanan">10.000 Points</string>
    <string name="dapatkan">Dapatkan</string>
    <string name="bayar_pemesanan">Bayar Pemesanan</string>

</resources>