<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".data.view.fragment.auth.RegisterFragment">

    <androidx.constraintlayout.utils.widget.ImageFilterView
        android:id="@+id/imageFilterView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="27dp"
        android:layout_marginTop="41dp"
        android:src="@drawable/logo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/appCompatTextView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="27dp"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/poppins_semibold"
        android:text="@string/registrasi_akun"
        android:textColor="@color/colorBlack"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageFilterView" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/etEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="33dp"
        android:layout_marginEnd="24dp"
        android:background="@drawable/edittext_rounded_corner"
        android:fontFamily="@font/poppins"
        android:hint="@string/email"
        android:paddingHorizontal="17dp"
        android:paddingVertical="8dp"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/appCompatTextView5" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/etNama"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="33dp"
        android:layout_marginEnd="24dp"
        android:background="@drawable/edittext_rounded_corner"
        android:fontFamily="@font/poppins"
        android:hint="@string/nama_lengkap"
        android:paddingHorizontal="17dp"
        android:paddingVertical="8dp"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etEmail" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/etPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="33dp"
        android:layout_marginEnd="24dp"
        android:background="@drawable/edittext_rounded_corner"
        android:fontFamily="@font/poppins"
        android:hint="@string/password"
        android:paddingHorizontal="17dp"
        android:paddingVertical="8dp"
        android:textSize="14sp"
        android:inputType="textPassword"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etNama" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/etPasswordKonfirmasi"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="33dp"
        android:layout_marginEnd="24dp"
        android:background="@drawable/edittext_rounded_corner"
        android:fontFamily="@font/poppins"
        android:hint="@string/password_confirmation"
        android:paddingHorizontal="17dp"
        android:paddingVertical="8dp"
        android:textSize="14sp"
        android:inputType="textPassword"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etPassword" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_register"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="33dp"
        android:layout_marginBottom="116dp"
        android:background="@drawable/buttonauth_rounded_corner"
        android:fontFamily="@font/poppins_semibold"
        android:text="@string/buat_akun"
        android:textColor="@color/colorWhite"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="parent"
        tools:layout_editor_absoluteX="33dp" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvSudah"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="33dp"
        android:layout_marginTop="24dp"
        android:fontFamily="@font/poppins"
        android:text="@string/udah_punya_akun"
        android:textColor="@color/colorBlack"
        android:textSize="12sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_register" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvMasuk"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginTop="24dp"
        android:fontFamily="@font/poppins"
        android:text="@string/masuk_aja"
        android:textColor="@color/colorPrimary"
        android:textSize="12sp"
        app:layout_constraintStart_toEndOf="@+id/tvSudah"
        app:layout_constraintTop_toBottomOf="@+id/btn_register" />

</androidx.constraintlayout.widget.ConstraintLayout>